# haskell-playground

./: .gitignore  README.md  demo01.cabal
app/: Main.hs
src/: Main.hs
src/Basic/: Functions.hs  Lists.hs  Values.hs
src/Type/: Monads.hs  StateMonads.hs  TypeClasses.hs  Types.hs
test/: Main.hs
test/Test/Basic/: Values.hs
