name:                demo01
version:             0.1.0.0
author:              Mendix Datastorage
build-type:          Simple
cabal-version:       >=1.10

executable demo01
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Basic.Values, Basic.Lists, Basic.Functions,
                       Type.Types, Type.TypeClasses, Type.Monads
  build-depends:       base >= 4.7 && < 5