name:                demo01
version:             0.1.0.0
author:              Mendix Datastorage
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Basic.Values, Basic.Lists, Basic.Functions,
                       Type.Types, Type.TypeClasses, Type.Monads, Type.StateMonads
  build-depends:       base >= 4.7 && < 5, mtl, text, hspec

executable demo01
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, mtl, text, hspec, demo01

test-suite demo01-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Test.Basic.Values
  build-depends:       base >= 4.7 && < 5, mtl, text, hspec, demo01